// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeTypesSetting schema snapshot dark fixture has stable leaf paths 1`] = `
[
  "avatar.name",
  "avatar.size",
  "avatar.type",
  "avatar.url",
  "backdrop.color",
  "backdrop.highlight.color",
  "backdrop.highlight.opacity",
  "backdrop.highlight.radius",
  "backdrop.highlight.spread",
  "backdrop.highlight.type",
  "backdrop.opacity",
  "banner.animationDuration",
  "banner.animationTiming",
  "banner.backgroundColor.active",
  "banner.backgroundColor.background",
  "banner.backgroundColor.color",
  "banner.backgroundColor.hover",
  "banner.padding",
  "banner.textColor.active",
  "banner.textColor.background",
  "banner.textColor.color",
  "banner.textColor.hover",
  "border.borderColor",
  "border.borderRadius",
  "border.borderWidth",
  "border.borderWidthEnabled",
  "brandColor.active",
  "brandColor.autoActive",
  "brandColor.autoHover",
  "brandColor.background",
  "brandColor.color",
  "brandColor.hover",
  "bubble.placement.position",
  "bubble.placement.positionOffsetX",
  "bubble.placement.positionOffsetY",
  "bubble.width",
  "buttons.borderRadius",
  "buttons.height",
  "buttons.minWidth",
  "buttons.primary.backgroundColor.active",
  "buttons.primary.backgroundColor.background",
  "buttons.primary.backgroundColor.color",
  "buttons.primary.backgroundColor.hover",
  "buttons.primary.border.borderWidth",
  "buttons.primary.border.color.active",
  "buttons.primary.border.color.background",
  "buttons.primary.border.color.color",
  "buttons.primary.border.color.hover",
  "buttons.primary.border.enabled",
  "buttons.primary.fontWeight",
  "buttons.primary.textColor.active",
  "buttons.primary.textColor.background",
  "buttons.primary.textColor.color",
  "buttons.primary.textColor.hover",
  "buttons.px",
  "buttons.secondary.backgroundColor.active",
  "buttons.secondary.backgroundColor.background",
  "buttons.secondary.backgroundColor.color",
  "buttons.secondary.backgroundColor.hover",
  "buttons.secondary.border.borderWidth",
  "buttons.secondary.border.color.active",
  "buttons.secondary.border.color.background",
  "buttons.secondary.border.color.color",
  "buttons.secondary.border.color.hover",
  "buttons.secondary.border.enabled",
  "buttons.secondary.fontWeight",
  "buttons.secondary.textColor.active",
  "buttons.secondary.textColor.background",
  "buttons.secondary.textColor.color",
  "buttons.secondary.textColor.hover",
  "checklist.checkmarkColor",
  "checklist.completedTaskTextDecoration",
  "checklist.placement.position",
  "checklist.placement.positionOffsetX",
  "checklist.placement.positionOffsetY",
  "checklist.width",
  "checklistLauncher.borderRadius",
  "checklistLauncher.color.active",
  "checklistLauncher.color.background",
  "checklistLauncher.color.color",
  "checklistLauncher.color.hover",
  "checklistLauncher.counter.background",
  "checklistLauncher.counter.color",
  "checklistLauncher.fontWeight",
  "checklistLauncher.height",
  "checklistLauncher.placement.position",
  "checklistLauncher.placement.positionOffsetX",
  "checklistLauncher.placement.positionOffsetY",
  "focusHighlight.color",
  "focusHighlight.opacity",
  "font.fontFamily",
  "font.fontSize",
  "font.fontWeightBold",
  "font.fontWeightNormal",
  "font.h1FontSize",
  "font.h2FontSize",
  "font.lineHeight",
  "font.linkColor",
  "launcherBeacon.color",
  "launcherBeacon.size",
  "launcherButtons.borderRadius",
  "launcherButtons.height",
  "launcherButtons.primary.backgroundColor.active",
  "launcherButtons.primary.backgroundColor.background",
  "launcherButtons.primary.backgroundColor.color",
  "launcherButtons.primary.backgroundColor.hover",
  "launcherButtons.primary.border.borderWidth",
  "launcherButtons.primary.border.color.active",
  "launcherButtons.primary.border.color.background",
  "launcherButtons.primary.border.color.color",
  "launcherButtons.primary.border.color.hover",
  "launcherButtons.primary.border.enabled",
  "launcherButtons.primary.fontWeight",
  "launcherButtons.primary.textColor.active",
  "launcherButtons.primary.textColor.background",
  "launcherButtons.primary.textColor.color",
  "launcherButtons.primary.textColor.hover",
  "launcherButtons.px",
  "launcherIcon.color.active",
  "launcherIcon.color.background",
  "launcherIcon.color.color",
  "launcherIcon.color.hover",
  "launcherIcon.opacity",
  "launcherIcon.size",
  "mainColor.active",
  "mainColor.autoActive",
  "mainColor.autoHover",
  "mainColor.background",
  "mainColor.color",
  "mainColor.hover",
  "modal.backdropClickBehavior",
  "modal.padding",
  "modal.width",
  "progress.chainRoundedHeight",
  "progress.chainSquaredHeight",
  "progress.color",
  "progress.dotsHeight",
  "progress.enabled",
  "progress.height",
  "progress.narrowHeight",
  "progress.numberedHeight",
  "progress.position",
  "progress.type",
  "resourceCenter.dividerLines",
  "resourceCenter.headerBackground.color",
  "resourceCenter.headerBackground.gradientFrom",
  "resourceCenter.headerBackground.gradientTo",
  "resourceCenter.headerBackground.imageUrl",
  "resourceCenter.headerBackground.type",
  "resourceCenter.largeWidth",
  "resourceCenter.logoUrl",
  "resourceCenter.maxHeight",
  "resourceCenter.normalWidth",
  "resourceCenter.offsetX",
  "resourceCenter.offsetY",
  "resourceCenter.placement",
  "resourceCenter.transitionDuration",
  "resourceCenterLauncherButton.borderRadius",
  "resourceCenterLauncherButton.color.active",
  "resourceCenterLauncherButton.color.background",
  "resourceCenterLauncherButton.color.foreground",
  "resourceCenterLauncherButton.color.hover",
  "resourceCenterLauncherButton.height",
  "resourceCenterLauncherButton.iconType",
  "resourceCenterLauncherButton.imageHeight",
  "resourceCenterLauncherButton.textMode",
  "resourceCenterUnreadBadge.backgroundColor",
  "resourceCenterUnreadBadge.textColor",
  "survey.color",
  "tooltip.missingTargetBehavior",
  "tooltip.missingTargetTolerance",
  "tooltip.notchSize",
  "tooltip.width",
  "xbutton.color",
]
`;

exports[`ThemeTypesSetting schema snapshot defaults fixture has stable leaf paths 1`] = `
[
  "avatar.name",
  "avatar.size",
  "avatar.type",
  "avatar.url",
  "backdrop.color",
  "backdrop.highlight.color",
  "backdrop.highlight.opacity",
  "backdrop.highlight.radius",
  "backdrop.highlight.spread",
  "backdrop.highlight.type",
  "backdrop.opacity",
  "banner.animationDuration",
  "banner.animationTiming",
  "banner.backgroundColor.active",
  "banner.backgroundColor.background",
  "banner.backgroundColor.color",
  "banner.backgroundColor.hover",
  "banner.padding",
  "banner.textColor.active",
  "banner.textColor.background",
  "banner.textColor.color",
  "banner.textColor.hover",
  "border.borderColor",
  "border.borderRadius",
  "border.borderWidth",
  "border.borderWidthEnabled",
  "brandColor.active",
  "brandColor.autoActive",
  "brandColor.autoHover",
  "brandColor.background",
  "brandColor.color",
  "brandColor.hover",
  "bubble.placement.position",
  "bubble.placement.positionOffsetX",
  "bubble.placement.positionOffsetY",
  "bubble.width",
  "buttons.borderRadius",
  "buttons.height",
  "buttons.minWidth",
  "buttons.primary.backgroundColor.active",
  "buttons.primary.backgroundColor.background",
  "buttons.primary.backgroundColor.color",
  "buttons.primary.backgroundColor.hover",
  "buttons.primary.border.borderWidth",
  "buttons.primary.border.color.active",
  "buttons.primary.border.color.background",
  "buttons.primary.border.color.color",
  "buttons.primary.border.color.hover",
  "buttons.primary.border.enabled",
  "buttons.primary.fontWeight",
  "buttons.primary.textColor.active",
  "buttons.primary.textColor.background",
  "buttons.primary.textColor.color",
  "buttons.primary.textColor.hover",
  "buttons.px",
  "buttons.secondary.backgroundColor.active",
  "buttons.secondary.backgroundColor.background",
  "buttons.secondary.backgroundColor.color",
  "buttons.secondary.backgroundColor.hover",
  "buttons.secondary.border.borderWidth",
  "buttons.secondary.border.color.active",
  "buttons.secondary.border.color.background",
  "buttons.secondary.border.color.color",
  "buttons.secondary.border.color.hover",
  "buttons.secondary.border.enabled",
  "buttons.secondary.fontWeight",
  "buttons.secondary.textColor.active",
  "buttons.secondary.textColor.background",
  "buttons.secondary.textColor.color",
  "buttons.secondary.textColor.hover",
  "checklist.checkmarkColor",
  "checklist.completedTaskTextDecoration",
  "checklist.placement.position",
  "checklist.placement.positionOffsetX",
  "checklist.placement.positionOffsetY",
  "checklist.width",
  "checklistLauncher.borderRadius",
  "checklistLauncher.color.active",
  "checklistLauncher.color.background",
  "checklistLauncher.color.color",
  "checklistLauncher.color.hover",
  "checklistLauncher.counter.background",
  "checklistLauncher.counter.color",
  "checklistLauncher.fontWeight",
  "checklistLauncher.height",
  "checklistLauncher.placement.position",
  "checklistLauncher.placement.positionOffsetX",
  "checklistLauncher.placement.positionOffsetY",
  "focusHighlight.color",
  "focusHighlight.opacity",
  "font.fontFamily",
  "font.fontSize",
  "font.fontWeightBold",
  "font.fontWeightNormal",
  "font.h1FontSize",
  "font.h2FontSize",
  "font.lineHeight",
  "font.linkColor",
  "launcherBeacon.color",
  "launcherBeacon.size",
  "launcherButtons.borderRadius",
  "launcherButtons.height",
  "launcherButtons.primary.backgroundColor.active",
  "launcherButtons.primary.backgroundColor.background",
  "launcherButtons.primary.backgroundColor.color",
  "launcherButtons.primary.backgroundColor.hover",
  "launcherButtons.primary.border.borderWidth",
  "launcherButtons.primary.border.color.active",
  "launcherButtons.primary.border.color.background",
  "launcherButtons.primary.border.color.color",
  "launcherButtons.primary.border.color.hover",
  "launcherButtons.primary.border.enabled",
  "launcherButtons.primary.fontWeight",
  "launcherButtons.primary.textColor.active",
  "launcherButtons.primary.textColor.background",
  "launcherButtons.primary.textColor.color",
  "launcherButtons.primary.textColor.hover",
  "launcherButtons.px",
  "launcherIcon.color.active",
  "launcherIcon.color.background",
  "launcherIcon.color.color",
  "launcherIcon.color.hover",
  "launcherIcon.opacity",
  "launcherIcon.size",
  "mainColor.active",
  "mainColor.autoActive",
  "mainColor.autoHover",
  "mainColor.background",
  "mainColor.color",
  "mainColor.hover",
  "modal.backdropClickBehavior",
  "modal.padding",
  "modal.width",
  "progress.chainRoundedHeight",
  "progress.chainSquaredHeight",
  "progress.color",
  "progress.dotsHeight",
  "progress.enabled",
  "progress.height",
  "progress.narrowHeight",
  "progress.numberedHeight",
  "progress.position",
  "progress.type",
  "resourceCenter.dividerLines",
  "resourceCenter.headerBackground.color",
  "resourceCenter.headerBackground.gradientFrom",
  "resourceCenter.headerBackground.gradientTo",
  "resourceCenter.headerBackground.imageUrl",
  "resourceCenter.headerBackground.type",
  "resourceCenter.largeWidth",
  "resourceCenter.logoUrl",
  "resourceCenter.maxHeight",
  "resourceCenter.normalWidth",
  "resourceCenter.offsetX",
  "resourceCenter.offsetY",
  "resourceCenter.placement",
  "resourceCenter.transitionDuration",
  "resourceCenterLauncherButton.borderRadius",
  "resourceCenterLauncherButton.color.active",
  "resourceCenterLauncherButton.color.background",
  "resourceCenterLauncherButton.color.foreground",
  "resourceCenterLauncherButton.color.hover",
  "resourceCenterLauncherButton.height",
  "resourceCenterLauncherButton.iconType",
  "resourceCenterLauncherButton.imageHeight",
  "resourceCenterLauncherButton.textMode",
  "resourceCenterUnreadBadge.backgroundColor",
  "resourceCenterUnreadBadge.textColor",
  "survey.color",
  "tooltip.missingTargetBehavior",
  "tooltip.missingTargetTolerance",
  "tooltip.notchSize",
  "tooltip.width",
  "xbutton.color",
]
`;

exports[`ThemeTypesSetting schema snapshot rich fixture (all optional fields populated) has stable leaf paths 1`] = `
[
  "avatar.name",
  "avatar.size",
  "avatar.type",
  "avatar.url",
  "backdrop.color",
  "backdrop.highlight.color",
  "backdrop.highlight.opacity",
  "backdrop.highlight.radius",
  "backdrop.highlight.spread",
  "backdrop.highlight.type",
  "backdrop.opacity",
  "banner.animationDuration",
  "banner.animationTiming",
  "banner.backgroundColor.active",
  "banner.backgroundColor.background",
  "banner.backgroundColor.color",
  "banner.backgroundColor.hover",
  "banner.padding",
  "banner.textColor.active",
  "banner.textColor.background",
  "banner.textColor.color",
  "banner.textColor.hover",
  "border.borderColor",
  "border.borderRadius",
  "border.borderWidth",
  "border.borderWidthEnabled",
  "brandColor.active",
  "brandColor.autoActive",
  "brandColor.autoHover",
  "brandColor.background",
  "brandColor.color",
  "brandColor.hover",
  "bubble.placement.position",
  "bubble.placement.positionOffsetX",
  "bubble.placement.positionOffsetY",
  "bubble.width",
  "buttons.borderRadius",
  "buttons.height",
  "buttons.minWidth",
  "buttons.primary.backgroundColor.active",
  "buttons.primary.backgroundColor.background",
  "buttons.primary.backgroundColor.color",
  "buttons.primary.backgroundColor.hover",
  "buttons.primary.border.borderWidth",
  "buttons.primary.border.color.active",
  "buttons.primary.border.color.background",
  "buttons.primary.border.color.color",
  "buttons.primary.border.color.hover",
  "buttons.primary.border.enabled",
  "buttons.primary.fontWeight",
  "buttons.primary.textColor.active",
  "buttons.primary.textColor.background",
  "buttons.primary.textColor.color",
  "buttons.primary.textColor.hover",
  "buttons.px",
  "buttons.secondary.backgroundColor.active",
  "buttons.secondary.backgroundColor.background",
  "buttons.secondary.backgroundColor.color",
  "buttons.secondary.backgroundColor.hover",
  "buttons.secondary.border.borderWidth",
  "buttons.secondary.border.color.active",
  "buttons.secondary.border.color.background",
  "buttons.secondary.border.color.color",
  "buttons.secondary.border.color.hover",
  "buttons.secondary.border.enabled",
  "buttons.secondary.fontWeight",
  "buttons.secondary.textColor.active",
  "buttons.secondary.textColor.background",
  "buttons.secondary.textColor.color",
  "buttons.secondary.textColor.hover",
  "checklist.checkmarkColor",
  "checklist.completedTaskTextDecoration",
  "checklist.placement.position",
  "checklist.placement.positionOffsetX",
  "checklist.placement.positionOffsetY",
  "checklist.width",
  "checklist.zIndex",
  "checklistLauncher.borderRadius",
  "checklistLauncher.color.active",
  "checklistLauncher.color.background",
  "checklistLauncher.color.color",
  "checklistLauncher.color.hover",
  "checklistLauncher.counter.background",
  "checklistLauncher.counter.color",
  "checklistLauncher.fontWeight",
  "checklistLauncher.height",
  "checklistLauncher.placement.position",
  "checklistLauncher.placement.positionOffsetX",
  "checklistLauncher.placement.positionOffsetY",
  "customCss",
  "focusHighlight.color",
  "focusHighlight.opacity",
  "font.customFontFamily",
  "font.fontFamily",
  "font.fontSize",
  "font.fontWeightBold",
  "font.fontWeightNormal",
  "font.h1FontSize",
  "font.h2FontSize",
  "font.lineHeight",
  "font.linkColor",
  "launcherBeacon.color",
  "launcherBeacon.size",
  "launcherButtons.borderRadius",
  "launcherButtons.height",
  "launcherButtons.primary.backgroundColor.active",
  "launcherButtons.primary.backgroundColor.background",
  "launcherButtons.primary.backgroundColor.color",
  "launcherButtons.primary.backgroundColor.hover",
  "launcherButtons.primary.border.borderWidth",
  "launcherButtons.primary.border.color.active",
  "launcherButtons.primary.border.color.background",
  "launcherButtons.primary.border.color.color",
  "launcherButtons.primary.border.color.hover",
  "launcherButtons.primary.border.enabled",
  "launcherButtons.primary.fontWeight",
  "launcherButtons.primary.textColor.active",
  "launcherButtons.primary.textColor.background",
  "launcherButtons.primary.textColor.color",
  "launcherButtons.primary.textColor.hover",
  "launcherButtons.px",
  "launcherButtons.width",
  "launcherIcon.color.active",
  "launcherIcon.color.background",
  "launcherIcon.color.color",
  "launcherIcon.color.hover",
  "launcherIcon.opacity",
  "launcherIcon.size",
  "mainColor.active",
  "mainColor.autoActive",
  "mainColor.autoHover",
  "mainColor.background",
  "mainColor.color",
  "mainColor.hover",
  "modal.backdropClickBehavior",
  "modal.padding",
  "modal.width",
  "progress.chainRoundedHeight",
  "progress.chainSquaredHeight",
  "progress.color",
  "progress.dotsHeight",
  "progress.enabled",
  "progress.height",
  "progress.narrowHeight",
  "progress.numberedHeight",
  "progress.position",
  "progress.type",
  "resourceCenter.dividerLines",
  "resourceCenter.headerBackground.color",
  "resourceCenter.headerBackground.gradientFrom",
  "resourceCenter.headerBackground.gradientTo",
  "resourceCenter.headerBackground.imageUrl",
  "resourceCenter.headerBackground.type",
  "resourceCenter.largeWidth",
  "resourceCenter.logoUrl",
  "resourceCenter.maxHeight",
  "resourceCenter.normalWidth",
  "resourceCenter.offsetX",
  "resourceCenter.offsetY",
  "resourceCenter.placement",
  "resourceCenter.transitionDuration",
  "resourceCenter.zIndex",
  "resourceCenterLauncherButton.borderRadius",
  "resourceCenterLauncherButton.color.active",
  "resourceCenterLauncherButton.color.background",
  "resourceCenterLauncherButton.color.foreground",
  "resourceCenterLauncherButton.color.hover",
  "resourceCenterLauncherButton.height",
  "resourceCenterLauncherButton.iconType",
  "resourceCenterLauncherButton.iconUrl",
  "resourceCenterLauncherButton.imageHeight",
  "resourceCenterLauncherButton.textMode",
  "resourceCenterUnreadBadge.backgroundColor",
  "resourceCenterUnreadBadge.textColor",
  "survey.color",
  "tooltip.missingTargetBehavior",
  "tooltip.missingTargetTolerance",
  "tooltip.notchSize",
  "tooltip.width",
  "xbutton.color",
]
`;

exports[`ThemeTypesSetting schema snapshot union of all fixtures has stable leaf paths (authoritative schema) 1`] = `
[
  "avatar.name",
  "avatar.size",
  "avatar.type",
  "avatar.url",
  "backdrop.color",
  "backdrop.highlight.color",
  "backdrop.highlight.opacity",
  "backdrop.highlight.radius",
  "backdrop.highlight.spread",
  "backdrop.highlight.type",
  "backdrop.opacity",
  "banner.animationDuration",
  "banner.animationTiming",
  "banner.backgroundColor.active",
  "banner.backgroundColor.background",
  "banner.backgroundColor.color",
  "banner.backgroundColor.hover",
  "banner.padding",
  "banner.textColor.active",
  "banner.textColor.background",
  "banner.textColor.color",
  "banner.textColor.hover",
  "border.borderColor",
  "border.borderRadius",
  "border.borderWidth",
  "border.borderWidthEnabled",
  "brandColor.active",
  "brandColor.autoActive",
  "brandColor.autoHover",
  "brandColor.background",
  "brandColor.color",
  "brandColor.hover",
  "bubble.placement.position",
  "bubble.placement.positionOffsetX",
  "bubble.placement.positionOffsetY",
  "bubble.width",
  "buttons.borderRadius",
  "buttons.height",
  "buttons.minWidth",
  "buttons.primary.backgroundColor.active",
  "buttons.primary.backgroundColor.background",
  "buttons.primary.backgroundColor.color",
  "buttons.primary.backgroundColor.hover",
  "buttons.primary.border.borderWidth",
  "buttons.primary.border.color.active",
  "buttons.primary.border.color.background",
  "buttons.primary.border.color.color",
  "buttons.primary.border.color.hover",
  "buttons.primary.border.enabled",
  "buttons.primary.fontWeight",
  "buttons.primary.textColor.active",
  "buttons.primary.textColor.background",
  "buttons.primary.textColor.color",
  "buttons.primary.textColor.hover",
  "buttons.px",
  "buttons.secondary.backgroundColor.active",
  "buttons.secondary.backgroundColor.background",
  "buttons.secondary.backgroundColor.color",
  "buttons.secondary.backgroundColor.hover",
  "buttons.secondary.border.borderWidth",
  "buttons.secondary.border.color.active",
  "buttons.secondary.border.color.background",
  "buttons.secondary.border.color.color",
  "buttons.secondary.border.color.hover",
  "buttons.secondary.border.enabled",
  "buttons.secondary.fontWeight",
  "buttons.secondary.textColor.active",
  "buttons.secondary.textColor.background",
  "buttons.secondary.textColor.color",
  "buttons.secondary.textColor.hover",
  "checklist.checkmarkColor",
  "checklist.completedTaskTextDecoration",
  "checklist.placement.position",
  "checklist.placement.positionOffsetX",
  "checklist.placement.positionOffsetY",
  "checklist.width",
  "checklist.zIndex",
  "checklistLauncher.borderRadius",
  "checklistLauncher.color.active",
  "checklistLauncher.color.background",
  "checklistLauncher.color.color",
  "checklistLauncher.color.hover",
  "checklistLauncher.counter.background",
  "checklistLauncher.counter.color",
  "checklistLauncher.fontWeight",
  "checklistLauncher.height",
  "checklistLauncher.placement.position",
  "checklistLauncher.placement.positionOffsetX",
  "checklistLauncher.placement.positionOffsetY",
  "customCss",
  "focusHighlight.color",
  "focusHighlight.opacity",
  "font.customFontFamily",
  "font.fontFamily",
  "font.fontSize",
  "font.fontWeightBold",
  "font.fontWeightNormal",
  "font.h1FontSize",
  "font.h2FontSize",
  "font.lineHeight",
  "font.linkColor",
  "launcherBeacon.color",
  "launcherBeacon.size",
  "launcherButtons.borderRadius",
  "launcherButtons.height",
  "launcherButtons.primary.backgroundColor.active",
  "launcherButtons.primary.backgroundColor.background",
  "launcherButtons.primary.backgroundColor.color",
  "launcherButtons.primary.backgroundColor.hover",
  "launcherButtons.primary.border.borderWidth",
  "launcherButtons.primary.border.color.active",
  "launcherButtons.primary.border.color.background",
  "launcherButtons.primary.border.color.color",
  "launcherButtons.primary.border.color.hover",
  "launcherButtons.primary.border.enabled",
  "launcherButtons.primary.fontWeight",
  "launcherButtons.primary.textColor.active",
  "launcherButtons.primary.textColor.background",
  "launcherButtons.primary.textColor.color",
  "launcherButtons.primary.textColor.hover",
  "launcherButtons.px",
  "launcherButtons.width",
  "launcherIcon.color.active",
  "launcherIcon.color.background",
  "launcherIcon.color.color",
  "launcherIcon.color.hover",
  "launcherIcon.opacity",
  "launcherIcon.size",
  "mainColor.active",
  "mainColor.autoActive",
  "mainColor.autoHover",
  "mainColor.background",
  "mainColor.color",
  "mainColor.hover",
  "modal.backdropClickBehavior",
  "modal.padding",
  "modal.width",
  "progress.chainRoundedHeight",
  "progress.chainSquaredHeight",
  "progress.color",
  "progress.dotsHeight",
  "progress.enabled",
  "progress.height",
  "progress.narrowHeight",
  "progress.numberedHeight",
  "progress.position",
  "progress.type",
  "resourceCenter.dividerLines",
  "resourceCenter.headerBackground.color",
  "resourceCenter.headerBackground.gradientFrom",
  "resourceCenter.headerBackground.gradientTo",
  "resourceCenter.headerBackground.imageUrl",
  "resourceCenter.headerBackground.type",
  "resourceCenter.largeWidth",
  "resourceCenter.logoUrl",
  "resourceCenter.maxHeight",
  "resourceCenter.normalWidth",
  "resourceCenter.offsetX",
  "resourceCenter.offsetY",
  "resourceCenter.placement",
  "resourceCenter.transitionDuration",
  "resourceCenter.zIndex",
  "resourceCenterLauncherButton.borderRadius",
  "resourceCenterLauncherButton.color.active",
  "resourceCenterLauncherButton.color.background",
  "resourceCenterLauncherButton.color.foreground",
  "resourceCenterLauncherButton.color.hover",
  "resourceCenterLauncherButton.height",
  "resourceCenterLauncherButton.iconType",
  "resourceCenterLauncherButton.iconUrl",
  "resourceCenterLauncherButton.imageHeight",
  "resourceCenterLauncherButton.textMode",
  "resourceCenterUnreadBadge.backgroundColor",
  "resourceCenterUnreadBadge.textColor",
  "survey.color",
  "tooltip.missingTargetBehavior",
  "tooltip.missingTargetTolerance",
  "tooltip.notchSize",
  "tooltip.width",
  "xbutton.color",
]
`;
